[metadata]
license_file = LICENSE
name = nanomethphase
version = 0.1
author = Vahid Akbari
author_email = vakbari@bcgsc.ca
description = Phase long reads from Oxford Nanopore Technologies based on their methylated profile.
long_description = file:README.md
long_description_content_type = text/markdown
project_urls =
    GitHub = https://github.com/vahidAK/NanoMethPhase
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Unix
    Operating System :: POSIX :: Linux

[options]
packages = nanomethphase
python_requires = >=3.7
install_requires =
    numpy >= 1.16.0, < 1.19.0
    pysam >= 0.15.4
    pytabix >= 0.0.2
    tqdm >= 4.36.1
    snvoter >= 0.1.2

[options.entry_points]
console_scripts =
    nanomethphase = nanomethphase.__main__:main
